2012-11-07  Corinna Vinschen <corinna@vinschen.de>

	* Makefile.in ($(MINGW_BINS)): Drop -B$(mingw_build)/ from build
	expression.

2012-11-05  Corinna Vinschen <corinna@vinschen.de>

	* Makefile.in (MINGW_CXX): Attach $(CFLAGS) to allow providing
	build option tweaks to mingw compiler as well.

2012-10-24  Corinna Vinschen <corinna@vinschen.de>

	* configure.in: Add AC_NO_EXECUTABLES,
	* configure: Regenerate.

2012-10-24  Kai Tietz  <ktietz70@googlemail.com>
	    Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Corinna Vinschen <corinna@vinschen.de>

	* configure.in: Add check for MINGW_CXX.  Remove libiconv check.
	* configure: Regenerate.
	* Makefile.in: Remove references to mingw and w32api directories.
	Use MINGW_CXX instead of mingw script to build MINGW_BINS.
	Check for libiconv with $CC --print-file-name.
	* cygcheck.cc: Use relative include paths for Cygwin headers.
	* path.cc: Ditto.
	* strace.cc: Ditto
	* mingw: Remove.

2012-10-19  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygcheck.exe): Add temporary (1.7.17-only) hack to
	allow cygcheck running on pre-Vista despite of the new w32api not
	matching the locally used w32api.

2012-10-09  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Convert "if/else if" chain to a switch
	statement.  Drop "not yet supported" and "Server" from Windows 2012
	output string.

2012-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (dump_sysinfo): Drop "not yet supported" text from
	Windows 8.  Update products array.

2012-07-11  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygcheck.exe): Link against psapi.dll.
	* bloda.cc: Change include section to work with Mingw64 headers.
	Include psapi.h.  Use SystemProcessInformation instead of
	SystemProcessesAndThreadsInformation throughout and add define for
	w32api headers.  Ditto for PSYSTEM_PROCESS_INFORMATION vs.
	PSYSTEM_PROCESSES.
	(system_module_list): New type to replace SYSTEM_MODULE_INFORMATION.